--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/mocha": "^10.0.8",
+    "@types/ws": "^8.5.12",
     "chai": "^5.1.1",
     "mocha": "^10.7.3",
     "ts-mocha": "^10.0.0",
@@ -18,6 +19,7 @@
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "ethers": "^6.13.2",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "ws": "^8.18.0"
   }
 }
